fix font-chu va logo

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
       <div class="carousel__detail carousel-inner">
         <div class="carousel-item img__1 active">
           <div class="overlay__1 container">
-            <h1 class="animate__animated animate__fadeInDown delay-2 overlay__text">
+            <h1 class="animate__animated animate__fadeInDown delay-2 overlay__text" >
               The new EQA: This is for a new generation
             </h1>
-            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text">Learn more</a>
+            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text__a">Learn more</a>
           </div>
           <div class="overlay__2 container">
             <p class="animate__animated animate__fadeInDown delay-4 overlay__text">
@@ -123,7 +123,7 @@
             <h1 class="animate__animated animate__fadeInDown delay-2 overlay__text">
               EQS with unique MBUX Hyperscreen
             </h1>
-            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text">Learn more</a>
+            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text__a">Learn more</a>
           </div>
         </div>
         <div class="carousel-item img__3">
@@ -131,7 +131,7 @@
             <h1 class="animate__animated animate__fadeInDown delay-2 overlay__text">
               Five years of She's Mercedes
             </h1>
-            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text">Learn more</a>
+            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text__a">Learn more</a>
           </div>
         </div>
         <div class="carousel-item img__4">
@@ -139,7 +139,7 @@
             <h1 class="text-dark animate__animated animate__fadeInDown delay-2 overlay__text">
               The history of the S-Class.
             </h1>
-            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text">To the special</a>
+            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text__a">To the special</a>
           </div>
         </div>
         <div class="carousel-item img__5">
@@ -147,7 +147,7 @@
             <h1 class="animate__animated animate__fadeInDown delay-2 overlay__text">
               The new C-Class by Mercedes-Benz.
             </h1>
-            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text">Learn more</a>
+            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text__a">Learn more</a>
           </div>
         </div>
         <div class="carousel-item img__6">
@@ -155,7 +155,7 @@
             <h1  class="animate__animated animate__fadeInDown delay-2 overlay__text">
               Digital World Premiere of the new C-Class.
             </h1>
-            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text">Learn more</a>
+            <a class="btn btn-dark animate__animated animate__fadeInDown delay-4 overlay__text__a">Learn more</a>
           </div>
         </div>
       </div>
@@ -174,7 +174,7 @@
   <!-- SEARCH  -->
   <div class="container-fluid container__search pl-lg-5 pl-sm-4 pl-4"  id="sreach-bar">
     <div class="input-group search py-4 pl-lg-5">
-      <input type="text"  class=" ml-lg-5 ml-sm-3 ml-4 search__outline" placeholder="I am looking for... "
+      <input type="text"  class=" ml-lg-5 ml-sm-3 ml-4 search__outline pl-2" placeholder="I am looking for... "
          />
       <div class="input-group-append pr-lg-5 mr-lg-5 mr-2">
         <button class="btn btn-outline-secondary search__button mr-lg-5 mr-sm-4 mr-4" type="button" id="button-addon2">
